@startuml BCE_ViewCategoryDetails
title View Category Details

left to right direction
skinparam backgroundColor #FAFAFA
skinparam defaultFontName Arial
skinparam classBackgroundColor White
skinparam classBorderColor #333333

class "view_category.js" as B {
  +loadCategory()
  +formatDate(dateStr)
  +formatDateTime(dateStr)
}

class "GetCategoryDetailsController" as C {
  +dict
  getCategory(int category_id)
}

class "FRACategory" as E {
  +dict
  getById(int category_id)
}

B -- C
C -- E

@enduml
